--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;YourCartPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">&gt;&gt;setUp</td> 
+<tr bgcolor="a07e83">  <td>21/08/27 12:58:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckOutInfoPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:21</td>   <td>2336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateTitleDisplayedTest()[pri:1, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateTitleDisplayedTest</td> 
+<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateTitleTest()[pri:1, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateTitleTest</td> 
   <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:21</td>   <td>2359</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateSizeAndItemsInCartTest()[pri:2, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateSizeAndItemsInCartTest</td> 
+<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateContinueShoppingTest()[pri:2, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateContinueShoppingTest</td> 
   <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:21</td>   <td>2404</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateRemoveProductTest()[pri:3, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateRemoveProductTest</td> 
+<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateCheckoutTest()[pri:3, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateCheckoutTest</td> 
   <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:21</td>   <td>2511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateReturnShoppingTest()[pri:4, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateReturnShoppingTest</td> 
-  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:22</td>   <td>2629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="YourCartPageTest.validateCheckOutTest()[pri:5, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">validateCheckOutTest</td> 
-  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/26 23:09:25</td>   <td>5716</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;YourCartPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.YourCartPageTest@51e5fc98]">&lt;&lt;tearDown</td> 
+<tr bgcolor="a07e83">  <td>21/08/27 12:59:03</td>   <td>4622</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CheckOutInfoPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
 </table>
