--- a/test-output/old/Sauce Demo App Test Automation Suite/classes.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/classes.html
@@ -138,6 +138,44 @@
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>com.sauce.qa.testcases.CheckOutInfoPageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateTitleTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateCheckoutTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateContinueShoppingTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>com.sauce.qa.testcases.ProductListPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
