--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e83">  <td>21/08/27 12:58:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckOutInfoPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4135</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateTitleTest()[pri:1, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateTitleTest</td> 
-  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateContinueShoppingTest()[pri:2, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateContinueShoppingTest</td> 
-  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 12:59:02</td>   <td>4285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutInfoPageTest.validateCheckoutTest()[pri:3, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">validateCheckoutTest</td> 
-  <td>main@199640888</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 12:59:03</td>   <td>4622</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CheckOutInfoPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.CheckOutInfoPageTest@51e5fc98]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>4199</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">verifyProductListTitleTest</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>4238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">verifyFilterOptionsTest</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>4384</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">validateSortingTest</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>4616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">addToCartTest</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>4876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">removeFromCart</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:47:51</td>   <td>7004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">validateMenuOptionsTest</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:48:01</td>   <td>17711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">selectAProduct</td> 
+  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 18:48:06</td>   <td>22828</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
 </table>
