--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.addToCartTest()[pri:4, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">addToCartTest</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.removeFromCart()[pri:5, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">removeFromCart</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:48:01</td>   <td>13095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.selectAProduct()[pri:7, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">selectAProduct</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:44</td>   <td>-4616</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ProductListPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:48:06</td>   <td>18212</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ProductListPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:51</td>   <td>2388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateMenuOptionsTest()[pri:6, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">validateMenuOptionsTest</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>-232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.validateSortingTest()[pri:3, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">validateSortingTest</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>-378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyFilterOptionsTest()[pri:2, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">verifyFilterOptionsTest</td> 
-  <td>main@944427387</td>   <td></td> </tr>
-<tr bgcolor="a07e83">  <td>21/08/27 18:47:48</td>   <td>-417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductListPageTest.verifyProductListTitleTest()[pri:1, instance:com.sauce.qa.testcases.ProductListPageTest@1ddf84b8]">verifyProductListTitleTest</td> 
-  <td>main@944427387</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckOutOverviewPageTest.setUp()[pri:0, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:19</td>   <td>5086</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CheckOutOverviewPageTest.tearDown()[pri:0, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:18</td>   <td>4961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutOverviewPageTest.validateCancelTest()[pri:4, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">validateCancelTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:18</td>   <td>4873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutOverviewPageTest.validateCompletePaymentTest()[pri:3, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">validateCompletePaymentTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:18</td>   <td>4768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutOverviewPageTest.validateFinalCostTest()[pri:2, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">validateFinalCostTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
+<tr bgcolor="a07e83">  <td>21/08/27 22:25:18</td>   <td>4632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckOutOverviewPageTest.validateTotalCostTest()[pri:1, instance:com.sauce.qa.testcases.CheckOutOverviewPageTest@51e5fc98]">validateTotalCostTest</td> 
+  <td>main@199640888</td>   <td></td> </tr>
 </table>
