--- a/test-output/old/Sauce Demo App Test Automation Suite/classes.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/classes.html
@@ -176,6 +176,48 @@
 <td>tearDown</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>com.sauce.qa.testcases.CheckOutOverviewPageTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateCompletePaymentTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateTotalCostTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateFinalCostTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateCancelTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td>com.sauce.qa.testcases.ProductListPageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
@@ -183,11 +225,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyFilterOptionsTest</td>
+<td>verifyProductListTitleTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyProductListTitleTest</td>
+<td>verifyFilterOptionsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
