--- a/test-output/old/Sauce Demo App Test Automation Suite/toc.html
+++ b/test-output/old/Sauce Demo App Test Automation Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Sauce Demo App Test Automation Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>4 tests</td>
-<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
-<td>24 methods:<br/>
+<td>5 tests</td>
+<td><a target='mainFrame' href='classes.html'>6 classes</a></td>
+<td>28 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -20,9 +20,9 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Sauce Demo App Test Automation Suite (9/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Sauce Demo App Test Automation Suite (10/0/0)</td><td valign='top' align='right'>
   <a href='Sauce Demo App Test Automation Suite.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
@@ -48,6 +48,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Sauce Demo App Test Automation Suite3 (3/0/0)</td><td valign='top' align='right'>
   <a href='Sauce Demo App Test Automation Suite3.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Sauce Demo App Test Automation Suite4 (4/0/0)</td><td valign='top' align='right'>
+  <a href='Sauce Demo App Test Automation Suite4.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
